// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTableDDL (MySQL) > generates CREATE TABLE for a simple entity with UUID PK 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestUser\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT,
  \`age\` INT DEFAULT 0 NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE for entity with UUID PK and ManyToOne FK column 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestArticle\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`title\` TEXT NOT NULL,
  \`authorId\` CHAR(36) NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_k8iBfroD0WS\` FOREIGN KEY (\`authorId\`) REFERENCES \`TestAuthor\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE for owning side of OneToOne (includes FK column) 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestUserWithProfile\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`profileId\` CHAR(36),
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_1vUEfw_liWK\` FOREIGN KEY (\`profileId\`) REFERENCES \`TestProfile\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE with check constraints 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestChecked\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`age\` INT NOT NULL,
  \`score\` DOUBLE NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`chk_f6l8XZYrtK2\` CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT \`age_positive\` CHECK (age >= 0)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE with composite primary key 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestVersionKeyed\` (
  \`id\` CHAR(36) NOT NULL,
  \`versionId\` CHAR(36) NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`, \`versionId\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE with scope field 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestScopedEntity\` (
  \`id\` CHAR(36) NOT NULL,
  \`scope\` TEXT NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`label\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE with soft-delete and expiry date fields 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestSoftDelete\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`deletedAt\` DATETIME(3),
  \`expiresAt\` DATETIME(3),
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) > generates CREATE TABLE with unique constraints 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestIndexed\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`),
  UNIQUE KEY \`unique_email\` (\`email\`(191))
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE for a simple entity with UUID PK 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestUser\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT,
  \`age\` INT DEFAULT 0 NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE for entity with UUID PK and ManyToOne FK column 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestArticle\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`title\` TEXT NOT NULL,
  \`authorId\` CHAR(36) NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_k8iBfroD0WS\` FOREIGN KEY (\`authorId\`) REFERENCES \`TestAuthor\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE for owning side of OneToOne (includes FK column) 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestUserWithProfile\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`profileId\` CHAR(36),
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_1vUEfw_liWK\` FOREIGN KEY (\`profileId\`) REFERENCES \`TestProfile\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE with check constraints 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestChecked\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`age\` INT NOT NULL,
  \`score\` DOUBLE NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`chk_f6l8XZYrtK2\` CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT \`age_positive\` CHECK (age >= 0)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE with composite primary key 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestVersionKeyed\` (
  \`id\` CHAR(36) NOT NULL,
  \`versionId\` CHAR(36) NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`, \`versionId\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE with scope field 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestScopedEntity\` (
  \`id\` CHAR(36) NOT NULL,
  \`scope\` TEXT NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`label\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE with soft-delete and expiry date fields 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestSoftDelete\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`deletedAt\` DATETIME(3),
  \`expiresAt\` DATETIME(3),
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;

exports[`generateTableDDL (MySQL) generates CREATE TABLE with unique constraints 1`] = `
"CREATE TABLE IF NOT EXISTS \`TestIndexed\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`),
  UNIQUE KEY \`unique_email\` (\`email\`(191))
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;"
`;
